--- a/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_it_IT.json
@@ -5,7 +5,7 @@
   "data_processing_home_go_to_notebooks": "Visualizza tutti i notebook",
   "data_processing_home_button_new_job": "Avviare un nuovo job",
   "data_processing_home_go_to_jobs": "Visualizza tutti i job",
-  "data_processing_home_info_jobs": "Avvia job Apache Spark on demand, specificando la quantità di RAM e vCPU da utilizzare. Scarica il codice in formato JAR o Python in un container Swift ed eseguilo avviando un job. Per seguire lo stato di avanzamento del job è possibile utilizzare i log e le metriche in tempo reale.",
+  "data_processing_home_info_jobs": "Avvia job Apache Spark on demand, specificando la quantità di RAM e vCPU da utilizzare. Scarica il codice in formato JAR o Python in un container Swift ed eseguilo avviando un job. Per seguire l'esecuzione del job è possibile utilizzare i log, visualizzati in tempo reale.",
   "data_processing_home_info_notebooks": "Avvia i notebook Jupyter nel Cloud e, grazie al kernel Python per Apache Spark, avvia i job di data processing on demand direttamente dai notebook.",
   "data_processing_home_spark_trademark": ", Spark, Apache, logo Apache e logo del progetto Apache Spark sono marchi appartenenti alla Apache Software Foundation."
 }
