--- a/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_pl_PL.json
@@ -5,7 +5,7 @@
   "data_processing_home_go_to_notebooks": "Wyświetl wszystkie notebooki",
   "data_processing_home_button_new_job": "Uruchom nowe zadanie",
   "data_processing_home_go_to_jobs": "Pokaż wszystkie zadania",
-  "data_processing_home_info_jobs": "Uruchom zadania Apache Spark na żądanie, określając ilość RAM i vCPU, z których chcesz korzystać. Pobierz kod w formacie JAR lub Python do kontenera Swift i wykonaj go, przesyłając zadanie. Śledź postęp zadania dzięki logom i metrykom w czasie rzeczywistym.",
+  "data_processing_home_info_jobs": "Uruchom zadania Apache Spark na żądanie, określając ilość RAM i vCPU, z których chcesz korzystać. Pobierz kod w formacie JAR lub Python do kontenera Swift i wykonaj go, przesyłając zadanie. Śledź postęp zadania dzięki logom wyświetlanym w czasie rzeczywistym.",
   "data_processing_home_info_notebooks": "Uruchom notebooki Jupyter w chmurze, a dzięki jądru Python dla Apache Spark uruchamiaj zadania przetwarzania danych na żądanie bezpośrednio z notebooków.",
   "data_processing_home_spark_trademark": ", Spark, Apache, logo Apache oraz logo projektu Apache Spark to znaki towarowe należące do Fundacji Apache Software."
 }
