--- a/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/home/translations/Messages_pt_PT.json
@@ -5,7 +5,7 @@
   "data_processing_home_go_to_notebooks": "Ver todos os notebooks",
   "data_processing_home_button_new_job": "Iniciar um novo job",
   "data_processing_home_go_to_jobs": "Ver todos os jobs",
-  "data_processing_home_info_jobs": "Lance jobs Apache Spark a pedido, especificando a quantidade de RAM e de vCPU a utilizar. Faça download do seu código em formato JAR ou em código Python num container Swift e execute-o submetendo um job. Poderá seguir a execução do seu job através de logs e estatísticas em tempo real.",
+  "data_processing_home_info_jobs": "Lance jobs Apache Spark a pedido, especificando a quantidade de RAM e de vCPU a utilizar. Faça download do seu código em formato JAR ou em código Python num container Swift e execute-o submetendo um job. Pode seguir a execução do seu job através de logs em tempo real.",
   "data_processing_home_info_notebooks": "Inicie os seus notebooks Jupyter na cloud e, graças ao kernel Python para Apache Spark, lance projetos de Data Processing on demand diretamente a partir dos seus notebooks.",
   "data_processing_home_spark_trademark": "Spark, Apache, o logótipo Apache e o logótipo do projeto Apache Spark são marcas pertencentes à Apache Software Foundation."
 }
